[gd_scene load_steps=20 format=2]

[ext_resource path="res://Eratosthenes.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Eratosthenes.png" type="Texture" id=2]
[ext_resource path="res://UpdatedHurt.tres" type="Material" id=3]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Fire",
"speed": 4.0
}, {
"frames": [ SubResource( 7 ), SubResource( 10 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.5, 27 )

[sub_resource type="Animation" id=12]
resource_name = "Die"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.7, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 1.2, 1.5, 1.9, 2.3, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.631373, 0, 1 ), Color( 0.890196, 0.737255, 0.443137, 1 ), Color( 0.380392, 0.298039, 0.105882, 1 ), Color( 1, 0.352941, 0, 1 ), Color( 0.623529, 0, 0, 1 ), Color( 0.219608, 0.0117647, 0.0117647, 1 ), Color( 1, 0.913725, 0.713726, 1 ), Color( 1, 0.796078, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Fly" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:material:shader_param/color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="StreamTexture" id=13]
load_path = "res://.import/fireball-lion.png-8f1a91095446d4ed3d5773c124ecc290.stex"

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.827214, 0.911447 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="StreamTexture" id=15]
load_path = "res://.import/fireball-lion.png-8f1a91095446d4ed3d5773c124ecc290.stex"

[sub_resource type="Gradient" id=16]
offsets = PoolRealArray( 0, 0.827214, 0.911447 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[node name="Eratosthenes" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 0, -17 )
frames = SubResource( 3 )
animation = "Fly"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 4 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( -34, -3 )

[node name="FirePosition2" type="Position2D" parent="."]
position = Vector2( 37, -3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 12 )
anims/Hurt = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="IFramesTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FireArray1" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="FireArray1"]
position = Vector2( -36, 25 )

[node name="Position2D2" type="Position2D" parent="FireArray1"]
position = Vector2( -62, 26 )

[node name="Position2D3" type="Position2D" parent="FireArray1"]
position = Vector2( -91, 27 )

[node name="Position2D4" type="Position2D" parent="FireArray1"]
position = Vector2( -119, 28 )

[node name="Position2D5" type="Position2D" parent="FireArray1"]
position = Vector2( -146, 28 )

[node name="Position2D6" type="Position2D" parent="FireArray1"]
position = Vector2( -176, 29 )

[node name="Position2D7" type="Position2D" parent="FireArray1"]
position = Vector2( -207, 29 )

[node name="Position2D8" type="Position2D" parent="FireArray1"]
position = Vector2( -239, 30 )

[node name="Position2D9" type="Position2D" parent="FireArray1"]
position = Vector2( -266, 31 )

[node name="Position2D10" type="Position2D" parent="FireArray1"]
position = Vector2( -302, 31 )

[node name="Position2D11" type="Position2D" parent="FireArray1"]
position = Vector2( -341, 31 )

[node name="Position2D12" type="Position2D" parent="FireArray1"]
position = Vector2( -377, 33 )

[node name="FireArray2" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="FireArray2"]
position = Vector2( 37, 25 )

[node name="Position2D2" type="Position2D" parent="FireArray2"]
position = Vector2( 67, 25 )

[node name="Position2D3" type="Position2D" parent="FireArray2"]
position = Vector2( 97, 24 )

[node name="Position2D4" type="Position2D" parent="FireArray2"]
position = Vector2( 127, 24 )

[node name="Position2D5" type="Position2D" parent="FireArray2"]
position = Vector2( 157, 24 )

[node name="Position2D6" type="Position2D" parent="FireArray2"]
position = Vector2( 185, 25 )

[node name="Position2D7" type="Position2D" parent="FireArray2"]
position = Vector2( 212, 26 )

[node name="Position2D8" type="Position2D" parent="FireArray2"]
position = Vector2( 240, 26 )

[node name="Position2D9" type="Position2D" parent="FireArray2"]
position = Vector2( 268, 26 )

[node name="Position2D10" type="Position2D" parent="FireArray2"]
position = Vector2( 296, 26 )

[node name="Position2D11" type="Position2D" parent="FireArray2"]
position = Vector2( 325, 26 )

[node name="Position2D12" type="Position2D" parent="FireArray2"]
position = Vector2( 354, 26 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="FireParticles" type="CPUParticles2D" parent="."]
position = Vector2( -31, -10 )
z_index = 2
emitting = false
amount = 25
lifetime_randomness = 0.78
texture = SubResource( 13 )
emission_shape = 2
emission_rect_extents = Vector2( 6, 1 )
direction = Vector2( -1, 0 )
spread = 12.01
gravity = Vector2( 0, 100 )
initial_velocity = 170.9
scale_amount = 2.0
color_ramp = SubResource( 14 )

[node name="FireParticles2" type="CPUParticles2D" parent="."]
position = Vector2( 24, -19 )
z_index = 2
emitting = false
amount = 25
lifetime_randomness = 0.78
texture = SubResource( 15 )
emission_shape = 2
emission_rect_extents = Vector2( 6, 1 )
spread = 12.01
gravity = Vector2( 0, 100 )
initial_velocity = 170.9
scale_amount = 2.0
color_ramp = SubResource( 16 )

[connection signal="timeout" from="IFramesTimer" to="." method="_on_IFramesTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
